  - Now generate the moduleinfo.ini file automatically on intall or upgrade of a module.
  - Increase the maxlength attribute for password input boxes in myaccount.
  - Added new CMS_ADMIN_PATH define from the config class.
  - Move system modules to /lib/modules
  - Now look for third party modules in /assets/modules
  - Remove un-necessary moduleinterface.php from the root directory.

CMSContentManager - remember to bump version
  - Gets rid of secure options, flag output and bulk functionaltiy
  - modified to use CMS_ROOT_URL

FileManager - remember to bump version
  - modified to use CMS_ROOT_URL

Installation Assistant - remember to bump version
  - Now require at least version 2.0.1 to upgrade

ModuleManaver v2.2
  - XML import code now lives here.
  - XML export code now lives here.

Version 2.2.2 - Hearts Content
----------------------------------
Core - General
 - Additional security improvement in CMSModule::GetTemplateResource().
 - Now Smarty_CMS is no longer derived from SmartyBC (uses our own wrapper class) which prevents all occurrences of {php} tags from running.
 - Adds an admin directory .htaccess file to explicitly disable browser caching of any resources.
 - Fixes a relative path vulnerability in module_file_tpl resource.
 - Fixes a path building issue in CmsModuleInfo.
 - Fixes to parsing and generating moduleinfo.ini files.
 - Disallow any resource specifications with a * or a /.
     * This also means that no file resource specifications with path information will be permitted.
 - Move mact preprocessing to AFTER the template_top has been processed.  So order of processing (for module actions on the frontend is)
     a:  template top
     b:  mact preprocessing (if enabled, which is the default)
     c:  template body
     d:  template head
 - Fix sureGetNodeByAlias to check if the input is numeric. If it is, assume that it is a page id, not an alias.